// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/app_bar/app_bar should match snapshot on mount 1`] = `
<div
  className="app-bar"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="app-bar-icon active-rhs-plugin"
    key="the_component_id"
    onClick={[Function]}
  >
    <img
      src="the_icon_data"
    />
  </div>
</div>
`;

exports[`components/app_bar/app_bar should match snapshot on mount 2`] = `
<div
  className="app-bar"
  style={Object {}}
>
  <div
    className="app-bar-icon active-rhs-plugin"
    key="the_component_id"
    onClick={[Function]}
  >
    <img
      src="the_icon_data"
    />
  </div>
</div>
`;
